--- a/build.gradle
+++ b/build.gradle
@@ -23,14 +23,24 @@ test {
 dependencies {
 
     //lombok
-    compileOnly 'org.projectlombok:lombok:1.18.10'
-    annotationProcessor 'org.projectlombok:lombok:1.18.10'
+    compileOnly('org.projectlombok:lombok:1.18.24')
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     // StopWatch
-    implementation('org.apache.commons:commons-lang3:3.0')
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+    // webClient
+    implementation 'org.springframework:spring-webflux:5.3.21'
+    implementation 'io.projectreactor.netty:reactor-netty:1.0.20'
+
+    // jackson
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
 
     //junit5-dependencies
-    testImplementation('org.junit.jupiter:junit-jupiter:5.5.1')
+    testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.2.4'
 }
